@@ -6,6 +6,7 @@ $Id$
 	More detailed usage from -h
 	Special cased replies for webzephyr users on classes and
 	  login notifications for webzephyr users
+	Fixed bug that caused a crash on zpunt with '*' for an instance
 	
 2.0.4
 	Made command line option -n actually work
